--- a/apt-upgrade-if-possible.yml
+++ b/apt-upgrade-if-possible.yml
@@ -28,7 +28,10 @@
     - name: Upgrade durchführen, wenn Pakete vorhanden sind
       ansible.builtin.command: apt-get upgrade
       when: upgrade_count | int > 0
-      msg: "DEBUG: is executing"
+
+    - name: Nach Ausführung aller Tasks, alle nicht mehr brauchbaren packets entfernen
+      ansible.builtin.command: apt autoremove
+      when: upgrade_count | int > 0
 
     - name: Abschlussmeldung
       ansible.builtin.debug:
